# hyperq

./: .ghci  .gitignore  .gitmodules  .travis.yml  README.md  emacs.org  hft.org  hyperq.cabal  hyperq.org  hyperq.org_archive
Hyperq/: Iqconnect.hs
R/: algo.calcs.R  functions.algo.R  functions.moments.R  makedb.R  reboot.R  signal.prediction.R
Test/: Utils.hs  exec-dot.hs  exec-echo.hs  exec-echo2.hs  exec-iq.hs  exex-dummy.hs  test-dot.hs
dot/: echo-test.dot  iqcontroller.dot  iqfeed.dot  test.unit1.dot
haskell/Hyperq/: Iqconnect.hs
haskell/dev/: Background.hs  Controller.hs  ControllerTest.hs  Feed.hs  Iqtest.hs
haskell/test/: Iqtest.hs
src/: Background.hs  ControllerTest.hs  Dot.hs  EchoBackground.hs  Feed.hs  TestUtils.hs  Util.hs
src/Hyperq/: Background.hs  Dot.hs  EchoBackground.hs  IqFeed.hs
t/: exec-echo2.hs
test/: exec-dot.hs  exec-echo.hs  exec-echo2.hs  feed.hs  test-hyperq.hs
