name:              hyperq
version:           0.1
synopsis:          hyperq project testbed
homepage:          https://hyperq.github.io
license:           OtherLicense
license-file:      LICENSE
author:            Tony Day
maintainer:        tonyday567@gmail.com
category:          Trading
build-type:        Simple
stability:         Experimental
cabal-version:     >= 1.10

extra-source-files: Readme.md
description:        This project is a testbed for haskell implementation 
                    of a medium frequency trading runtime.

source-repository head
  type:     git
  location: git://github.com/hyperq/hyperq.git

-- dummy executable because the haskell-session process only checks the first
-- build specs, so any build-depends need to be here

Test-Suite test-dot
    type:               exitcode-stdio-1.0
    main-is:            test-dot.hs
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -O2
    hs-source-dirs:     .,Test, src
    build-depends:      base
                      , HUnit
                      , QuickCheck
                      , test-framework
                      , test-framework-hunit
                      , test-framework-quickcheck2
                      , containers == 0.4.2.1
                      , text > 0.11.2 && < 0.11.3
                      , graphviz == 2999.16.0.0

executable echo
  main-is:          exec-echo.hs
  default-language: Haskell2010
  ghc-options:      -threaded -Wall -O2
  hs-source-dirs:   .,Test, src
  build-depends:    base
                  , vector
                  , IORefCAS
                  , stm
                  , time
                  , data-ringbuffer == 0.3.1

executable dot
  main-is:          exec-dot.hs
  default-language: Haskell2010
  ghc-options:      -threaded -Wall -O2
  hs-source-dirs:   .,Test, src
  build-depends:    base
                  , graphviz
                  , text > 0.11.2 && < 0.11.3
                  , containers == 0.4.2.1

executable iq
  main-is:          exec-iq.hs
  default-language: Haskell2010
  ghc-options:      -threaded -Wall -O2
  hs-source-dirs:   .,Test, src
  build-depends:    base
                  , old-locale
                  , time
                  , process
                  , network
