name:              hyperq
version:           0.1
synopsis:          hyperq project testbed
homepage:          https://hyperq.github.io
license:           OtherLicense
license-file:      LICENSE
author:            Tony Day
maintainer:        tonyday567@gmail.com
category:          Trading
build-type:        Simple
stability:         Experimental
cabal-version:     >= 1.10

extra-source-files: Readme.md
description:        This project is a testbed for haskell implementation 
                    of a medium frequency trading runtime.

source-repository head
  type:     git
  location: git://github.com/hyperq/hyperq.git



library
  exposed-modules:   Hyperq.Dot
                   , Hyperq.IqFeed
                   , Hyperq.Background
                   , Hyperq.EchoBackground

  build-depends:     base >= 4 && < 5
                   , vector
                   , IORefCAS
                   , stm
                   , time
                   , graphviz
                   , text
                   , containers
                   , old-locale
                   , time
                   , process
                   , network
                   , HUnit
                   , QuickCheck
                   , test-framework
                   , test-framework-hunit
                   , data-ringbuffer

  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    src

Test-Suite test-hyperq
    type:               exitcode-stdio-1.0
    main-is:            test-hyperq.hs
    default-language:   Haskell2010
    ghc-options:        -threaded -Wall -O2
    hs-source-dirs:     test, src
    build-depends:      base
                      , HUnit
                      , QuickCheck
                      , test-framework
                      , test-framework-hunit
                      , containers
                      , text
                      , graphviz
                      , old-locale
                      , time
                      , process
                      , network
                      , stm
                      , IORefCAS
                      , vector
                      , data-ringbuffer

executable echo
  main-is:          exec-echo.hs
  default-language: Haskell2010
  ghc-options:      -threaded -Wall -O2
  hs-source-dirs:   test, src
  build-depends:    base
                  , vector
                  , IORefCAS
                  , stm
                  , time
                  , data-ringbuffer

executable echo2
  main-is:          exec-echo2.hs
  default-language: Haskell2010
  ghc-options:      -threaded -Wall -O2
  hs-source-dirs:   test, src
  build-depends:    base
                      , HUnit
                      , QuickCheck
                      , test-framework
                      , test-framework-hunit
                      , containers
                      , text
                      , graphviz
                      , old-locale
                      , time
                      , process
                      , network
                      , stm
                      , IORefCAS
                      , vector
                      , criterion
                      , data-ringbuffer

executable iq
  main-is:          exec-iq.hs
  default-language: Haskell2010
  ghc-options:      -threaded -Wall -O2
  hs-source-dirs:   test, src
  build-depends:    base
                  , old-locale
                  , time
                  , process
                  , network
